# container-images

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  renovate.json
apps/clara/backend/: entrypoint.sh  pyproject.toml
apps/clara/backend/alembic/: env.py
apps/clara/backend/alembic/versions/: a1b2c3d4e5f6_add_sync_tables.py  b3c4d5e6f7a8_json_columns.py  c221f062fcc9_initial.py
apps/clara/backend/src/clara/: config.py  crypto.py  database.py  deps.py  exceptions.py  logging.py  main.py  metrics.py  middleware.py  pagination.py  redis.py  worker.py
apps/clara/backend/tests/: conftest.py  test_activities.py  test_auth.py  test_auth_security.py  test_base_model.py  test_base_repository.py  test_cleanup.py  test_config.py  test_contact_sub_resources.py  test_contacts.py  test_csv_io.py  test_customization.py  test_dav_converters.py  test_dav_sync_engine.py  test_dav_sync_integration.py  test_debts.py  test_digest.py  test_error_responses.py  test_files.py  test_gifts.py  test_git_sync_algorithm.py  test_git_sync_integration.py  test_git_sync_markdown.py  test_journal.py  test_json_export.py  test_middleware.py  test_notes.py  test_notifications.py  test_redis.py  test_reminders.py  test_reminders_job.py  test_request_size.py  test_tasks.py  test_vaults.py  test_vcard.py
apps/exchanger/: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  mise.toml  pyproject.toml
apps/exchanger/.github/workflows/: ci.yml
apps/exchanger/app/: __init__.py  config.py  database.py  main.py  models.py  routes.py  scheduler.py  task_manager.py
apps/exchanger/app/services/: backfill.py  symbols.py
apps/exchanger/app/sources/: __init__.py  cnb.py  fcs.py  protocol.py  registry.py
apps/exchanger/app/utils/: __init__.py  retry.py
apps/exchanger/backups/: backup_20260124_123702.json
apps/exchanger/frontend/: package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
apps/exchanger/frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
apps/exchanger/frontend/.svelte-kit/types/: route_meta_data.json
apps/exchanger/frontend/src/: app.css
apps/exchanger/frontend/src/lib/: api.ts  formatters.ts
apps/exchanger/frontend/src/routes/: +layout.svelte  +page.svelte  (+2 more)
apps/exchanger/frontend/test-results/: .last-run.json
apps/exchanger/frontend/tests/: e2e.spec.ts
apps/exchanger/k8s/: deployment.yaml
apps/exchanger/tests/: conftest.py  test_backfill_retry.py  test_backfill_service.py  test_cnb.py  test_config.py  test_database.py  test_retry.py  test_routes.py  test_symbols_service.py  test_task_manager.py
(+586 files in other folders)
