[project]
name = "exchanger"
version = "0.1.0"
description = "Multi-provider caching proxy for exchange rates"
requires-python = ">=3.12"
dependencies = [
    "fcsapi-rest",
    "fastapi",
    "uvicorn[standard]",
    "schedule",
    "requests",  # required by fcsapi-rest
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

